Fix overlapping text inside subtitle components

--- a/client/src/App/styles/_typography.scss
+++ b/client/src/App/styles/_typography.scss
@@ -32,8 +32,13 @@ h1 {
 h2 {
   margin: 0;
   padding: 0;
-  font-size: 37px;
+  font-size: 30px;
   font-weight: $font-thin;
+  text-overflow: ellipsis;
+  max-width: 100%;
+
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 
 p {
